--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,29 +73,4 @@ target_link_libraries(
 	utils
 )
 
-add_executable(test_rdma ${PROJECT_SOURCE_DIR}/tests/test_rdma.cpp)
-
-target_link_libraries(
-	test_rdma
-	rdma
-	utils
-	rpc
-)
-
-add_executable(rpc_client ${PROJECT_SOURCE_DIR}/tests/rpc_client.cpp)
-
-target_link_libraries(
-	rpc_client
-	rdma
-	utils
-	rpc
-)
-
-add_executable(rpc_server ${PROJECT_SOURCE_DIR}/tests/rpc_server.cpp)
-
-target_link_libraries(
-	rpc_server
-	rdma
-	rpc
-	profiler
-)
+add_subdirectory(tests)
