Shm RPC so slow...

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,17 @@ add_executable(rpc_server ${PROJECT_SOURCE_DIR}/tests/rdma/rpc_server.cpp)
 target_link_libraries(
 	rpc_server
 	rdma
+	utils
+	rpc
+	profiler
+)
+
+add_executable(test_shm ${PROJECT_SOURCE_DIR}/tests/rdma/test_shm.cpp)
+
+target_link_libraries(
+	test_shm
+	rdma
+	utils
 	rpc
 	profiler
 )
