--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(test_rdma ${PROJECT_SOURCE_DIR}/tests/rdma/test_rdma.cpp)
 target_link_libraries(
 	test_rdma
 	rdma
-	utils
+	stdutils
 	rpc
 )
 
@@ -12,7 +12,7 @@ add_executable(rpc_client ${PROJECT_SOURCE_DIR}/tests/rdma/rpc_client.cpp)
 target_link_libraries(
 	rpc_client
 	rdma
-	utils
+	stdutils
 	rpc
 )
 
@@ -21,7 +21,7 @@ add_executable(rpc_server ${PROJECT_SOURCE_DIR}/tests/rdma/rpc_server.cpp)
 target_link_libraries(
 	rpc_server
 	rdma
-	utils
+	stdutils
 	rpc
 	profiler
 )
@@ -30,7 +30,7 @@ add_executable(test_shm ${PROJECT_SOURCE_DIR}/tests/rdma/test_shm.cpp)
 target_link_libraries(
 	test_shm
 	rdma
-	utils
+	stdutils
 	rpc
 )
 
