--- a/tests/think/CMakeLists.txt
+++ b/tests/think/CMakeLists.txt
@@ -3,17 +3,17 @@ add_executable(coherence ${PROJECT_SOURCE_DIR}/tests/think/coherence.cpp)
 target_link_libraries(
 	coherence
 	rdma
-	utils
+	stdutils
 	rpc
 	profiler
 )
 
-add_executable(cas_faa_dm ${PROJECT_SOURCE_DIR}/tests/think/cas_faa_dm.cpp)
+add_executable(rdma_op ${PROJECT_SOURCE_DIR}/tests/think/rdma_op.cpp)
 
 target_link_libraries(
-	cas_faa_dm
+	rdma_op
 	rdma
-	utils
+	stdutils
 	rpc
 	profiler
 )
